--- a/src/main/resources/i18n/messages_zh_CN.properties
+++ b/src/main/resources/i18n/messages_zh_CN.properties
@@ -7,10 +7,9 @@ system.user.list.creationTime=创建时间
 system.user.list.department=部门
 system.user.list.status=状态
 system.user.list.action=操作
-行号 → Row No.
-用户名 → User Name
-描述 → Description
-创建时间 → Creation Time
-部门 → Department
-状态 → Status
-操作 → Action
+system.user.list.action.edit=编辑
+system.user.list.action.delete=删除
+system.user.list.action.editUser=编辑用户
+system.user.list.message.deleteUser=您确定要删除该条记录吗?
+system.user.list.status.effective=生效中
+system.user.list.status.expired=已停用
