--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -1,15 +1,23 @@
 #user module
-system.user.list.createUser=Create User
+system.user.common.userName=User Name
+system.user.common.department=Department
+system.user.common.description=Description
+system.user.common.role=Role
+system.user.common.status=Status
+system.user.common.status.enable=Effective
+system.user.common.status.disable=Expired
+system.user.common.action=Action
+system.user.common.action.edit=Edit
+system.user.common.action.delete=Delete
+system.user.common.action.editUser=Edit User
+system.user.common.action.createUser=Create User
+system.user.common.action.submit=Submit
+
+system.user.placeholder.search=Search
+system.user.placeholder.name=Please enter user name
+system.user.placeholder.description=Please enter a description, up to 300 characters...
+
 system.user.list.rowNo=Row
-system.user.list.userName=User Name
-system.user.list.description=Description
 system.user.list.creationTime=Creation Time
-system.user.list.department=Department
-system.user.list.status=Status
-system.user.list.action=Action
-system.user.list.action.edit=Edit
-system.user.list.action.delete=Delete
-system.user.list.action.editUser=Edit User
+
 system.user.list.message.deleteUser=R U sure to delete this record?
-system.user.list.status.effective=Effective
-system.user.list.status.expired=Expired
