--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -1,15 +1,32 @@
 #user module
-system.user.list.createUser=创建用户
+system.user.common.userName=用户名
+system.user.common.department=部门
+system.user.common.description=描述
+system.user.common.role=角色
+system.user.common.status=状态
+system.user.common.status.enable=启用
+system.user.common.status.disable=禁用
+system.user.common.action=操作
+system.user.common.action.edit=编辑
+system.user.common.action.delete=删除
+system.user.common.action.editUser=编辑用户
+system.user.common.action.createUser=创建用户
+system.user.common.action.submit=提交
+
+system.user.placeholder.search=搜索
+system.user.placeholder.name=请输入用户名
+system.user.placeholder.description=请输入描述，最多300个字符...
+
 system.user.list.rowNo=行号
-system.user.list.userName=用户名
-system.user.list.description=描述
 system.user.list.creationTime=创建时间
-system.user.list.department=部门
-system.user.list.status=状态
-system.user.list.action=操作
-system.user.list.action.edit=编辑
-system.user.list.action.delete=删除
-system.user.list.action.editUser=编辑用户
 system.user.list.message.deleteUser=您确定要删除该条记录吗?
-system.user.list.status.effective=生效中
-system.user.list.status.expired=已停用
+
+label.enterUsername=请输入用户名
+label.department=部门
+label.description=描述
+placeholder.enterDescription=请输入描述，最多300个字符 ...
+label.status=状态
+label.enable=启用
+label.disable=禁用
+label.role=角色
+button.submit=提 交
