--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -4,8 +4,8 @@ system.user.common.department=Department
 system.user.common.description=Description
 system.user.common.role=Role
 system.user.common.status=Status
-system.user.common.status.enable=Effective
-system.user.common.status.disable=Expired
+system.user.common.status.enable=enabled
+system.user.common.status.disable=disabled
 system.user.common.action=Action
 system.user.common.action.edit=Edit
 system.user.common.action.delete=Delete
@@ -14,10 +14,18 @@ system.user.common.action.createUser=Create User
 system.user.common.action.submit=Submit
 
 system.user.placeholder.search=Search
-system.user.placeholder.name=Please enter user name
+system.user.placeholder.name=Please enter the username
 system.user.placeholder.description=Please enter a description, up to 300 characters...
 
 system.user.list.rowNo=Row
 system.user.list.creationTime=Creation Time
-
 system.user.list.message.deleteUser=R U sure to delete this record?
+
+#paganation module
+framework.page.previousPage=Previous Page
+framework.page.nextPage=Next Page
+framework.page.eachPage=each page
+framework.page.records=records
+framework.page.show=show
+framework.page.total=total
+framework.page.recordNum=records
