--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -21,12 +21,11 @@ system.user.list.rowNo=行号
 system.user.list.creationTime=创建时间
 system.user.list.message.deleteUser=您确定要删除该条记录吗?
 
-label.enterUsername=请输入用户名
-label.department=部门
-label.description=描述
-placeholder.enterDescription=请输入描述，最多300个字符 ...
-label.status=状态
-label.enable=启用
-label.disable=禁用
-label.role=角色
-button.submit=提 交
+#paganation module
+framework.page.previousPage=前一页
+framework.page.nextPage=下一页
+framework.page.eachPage=每页
+framework.page.records=条
+framework.page.show=显示
+framework.page.total=共
+framework.page.recordNum=条记录
