--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -24,8 +24,8 @@ system.user.list.message.deleteUser=R U sure to delete this record?
 #paganation module
 framework.page.previousPage=Previous Page
 framework.page.nextPage=Next Page
-framework.page.eachPage=each page
-framework.page.records=records
-framework.page.show=show
-framework.page.total=total
+framework.page.eachPage=Each Page
+framework.page.records=Records
+framework.page.showing=, Showing
+framework.page.total=of
 framework.page.recordNum=records
