--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -26,6 +26,6 @@ framework.page.previousPage=前一页
 framework.page.nextPage=下一页
 framework.page.eachPage=每页
 framework.page.records=条
-framework.page.show=显示
+framework.page.showing=，显示
 framework.page.total=共
 framework.page.recordNum=条记录
