--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -25,7 +25,5 @@ system.user.list.message.deleteUser=R U sure to delete this record?
 framework.page.previousPage=Previous Page
 framework.page.nextPage=Next Page
 framework.page.eachPage=Each Page
-framework.page.records=Records
-framework.page.showing=, Showing
-framework.page.total=of
-framework.page.recordNum=records
+framework.page.records=Records,
+framework.page.summary=Total {0} records，Showing {1} ~ {2}
