--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -25,7 +25,5 @@ system.user.list.message.deleteUser=您确定要删除该条记录吗?
 framework.page.previousPage=前一页
 framework.page.nextPage=下一页
 framework.page.eachPage=每页
-framework.page.records=条
-framework.page.showing=，显示
-framework.page.total=共
-framework.page.recordNum=条记录
+framework.page.records=条.
+framework.page.summary=总共 {0} 条记录，显示 {1} ~ {2} 条记录
