--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -27,3 +27,15 @@ framework.page.nextPage=Next Page
 framework.page.eachPage=Each Page
 framework.page.records=Records,
 framework.page.summary=Total {0} records，Showing {1} ~ {2}
+
+#department module
+system.department.common.action=Action
+system.department.common.action.edit=Edit
+system.department.common.action.delete=Delete
+system.department.common.action.editDepartment=Edit Department
+system.department.common.action.createDepartment=Create Department
+system.department.common.action.submit=Submit
+system.department.common.departmentName=Department Name
+system.department.common.description=Description
+
+system.department.list.rowNo=Row
