--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -27,3 +27,15 @@ framework.page.nextPage=下一页
 framework.page.eachPage=每页
 framework.page.records=条.
 framework.page.summary=总共 {0} 条记录，显示 {1} ~ {2} 条记录
+
+#department module
+system.department.common.action=操作
+system.department.common.action.edit=编辑
+system.department.common.action.delete=删除
+system.department.common.action.editDepartment=编辑部门
+system.department.common.action.createDepartment=创建部门
+system.department.common.action.submit=提交
+system.department.common.departmentName=部门名称
+system.department.common.description=描述
+
+system.department.list.rowNo=行号
