--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -14,7 +14,7 @@ system.user.common.action.createUser=Create User
 system.user.common.action.submit=Submit
 
 system.user.placeholder.search=Search
-system.user.placeholder.name=Please enter the username
+system.user.placeholder.username=Please enter the username
 system.user.placeholder.description=Please enter a description, up to 300 characters...
 
 system.user.list.rowNo=Row
@@ -24,9 +24,9 @@ system.user.list.message.deleteUser=R U sure to delete this record?
 #paganation module
 framework.page.previousPage=Previous Page
 framework.page.nextPage=Next Page
-framework.page.eachPage=Each Page
-framework.page.records=Records,
-framework.page.summary=Total {0} records，Showing {1} ~ {2}
+framework.page.eachPage=Each page
+framework.page.records=records, 
+framework.page.summary=Showing {1}~{2} of {0} entries.
 
 #department module
 system.department.common.action=Action
@@ -38,4 +38,28 @@ system.department.common.action.submit=Submit
 system.department.common.departmentName=Department Name
 system.department.common.description=Description
 
+system.department.placeholder.search=Search
+system.department.placeholder.department=Please enter the department name
+system.department.placeholder.description=Please enter a description, up to 300 characters...
+
 system.department.list.rowNo=Row
+system.department.list.message.deleteUser=R U sure to delete this record?
+
+#menu module
+system.menu.comm.action=Action
+system.menu.comm.action.createMenu=Create Menu
+system.menu.comm.action.delete=Delete
+system.menu.comm.action.edit=Edit
+system.menu.comm.action.editMenu=Edit Menu
+
+system.menu.comm.name=Name
+system.menu.comm.code=Code
+system.menu.comm.url=Url
+system.menu.comm.icon=Icon
+system.menu.comm.depth=Depth
+system.menu.comm.resource=Resource
+system.menu.comm.order=Order
+system.menu.comm.type=Type
+
+system.menu.list.rowNo=Row
+system.menu.list.message.deleteMenu=R U sure to delete this record?
