--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -14,7 +14,7 @@ system.user.common.action.createUser=创建用户
 system.user.common.action.submit=提交
 
 system.user.placeholder.search=搜索
-system.user.placeholder.name=请输入用户名
+system.user.placeholder.username=请输入用户名
 system.user.placeholder.description=请输入描述，最多300个字符...
 
 system.user.list.rowNo=行号
@@ -26,7 +26,7 @@ framework.page.previousPage=前一页
 framework.page.nextPage=下一页
 framework.page.eachPage=每页
 framework.page.records=条.
-framework.page.summary=总共 {0} 条记录，显示 {1} ~ {2} 条记录
+framework.page.summary=共{0}条记录，显示{1} ~ {2}条记录
 
 #department module
 system.department.common.action=操作
@@ -38,4 +38,28 @@ system.department.common.action.submit=提交
 system.department.common.departmentName=部门名称
 system.department.common.description=描述
 
+system.department.placeholder.search=搜索
+system.department.placeholder.department=请输入部门名称
+system.department.placeholder.description=请输入描述，最多300个字符...
+
 system.department.list.rowNo=行号
+system.department.list.message.deleteUser=您确定要删除该条记录吗?
+
+#menu module
+system.menu.comm.action=操作
+system.menu.comm.action.createMenu=创建菜单
+system.menu.comm.action.delete=删除
+system.menu.comm.action.edit=编辑
+system.menu.comm.action.editMenu=编辑菜单
+
+system.menu.comm.name=名称
+system.menu.comm.code=编码
+system.menu.comm.url=地址
+system.menu.comm.icon=图标
+system.menu.comm.depth=深度
+system.menu.comm.resource=资源
+system.menu.comm.order=排序
+system.menu.comm.type=类型
+
+system.menu.list.rowNo=行号
+system.menu.list.message.deleteMenu=您确定要删除该条记录吗?
