--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -51,8 +51,14 @@ system.menu.comm.action.createMenu=Create Menu
 system.menu.comm.action.delete=Delete
 system.menu.comm.action.edit=Edit
 system.menu.comm.action.editMenu=Edit Menu
+system.menu.comm.action.submit=Submit
 
 system.menu.comm.name=Name
+system.menu.comm.name.directoryName=Directory Name
+system.menu.comm.name.menuName=Menu Name
+system.menu.comm.name.menuUrl=Menu Url
+system.menu.comm.name.fartherMenu=Farther Menu
+system.menu.comm.name.functionName=Function Name
 system.menu.comm.code=Code
 system.menu.comm.url=Url
 system.menu.comm.icon=Icon
@@ -62,4 +68,13 @@ system.menu.comm.order=Order
 system.menu.comm.type=Type
 
 system.menu.list.rowNo=Row
+system.menu.list.directory=Directory
+system.menu.list.menu=Menu
+system.menu.list.function=Function
 system.menu.list.message.deleteMenu=R U sure to delete this record?
+
+system.menu.add.action.addDirectory=Add Directory
+system.menu.add.action.addMenu=Add Menu
+system.menu.add.action.addFunction=Add Function
+system.menu.add.action.chooseMenu=Choose Directory/Menu
+system.menu.add.select=--Select--
