--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -51,8 +51,14 @@ system.menu.comm.action.createMenu=创建菜单
 system.menu.comm.action.delete=删除
 system.menu.comm.action.edit=编辑
 system.menu.comm.action.editMenu=编辑菜单
+system.menu.comm.action.submit=提交
 
 system.menu.comm.name=名称
+system.menu.comm.name.directoryName=目录名称
+system.menu.comm.name.menuName=菜单名称
+system.menu.comm.name.menuUrl=菜单Url
+system.menu.comm.name.fartherMenu=父级菜单
+system.menu.comm.name.functionName=功能名称
 system.menu.comm.code=编码
 system.menu.comm.url=地址
 system.menu.comm.icon=图标
@@ -62,4 +68,13 @@ system.menu.comm.order=排序
 system.menu.comm.type=类型
 
 system.menu.list.rowNo=行号
+system.menu.list.directory=目录
+system.menu.list.menu=菜单
+system.menu.list.function=功能
 system.menu.list.message.deleteMenu=您确定要删除该条记录吗?
+
+system.menu.add.action.addDirectory=添加目录
+system.menu.add.action.addMenu=添加菜单
+system.menu.add.action.addFunction=添加功能
+system.menu.add.action.chooseMenu=选择目录/菜单
+system.menu.add.select=--请选择--
