--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -26,7 +26,7 @@ framework.page.previousPage=Previous Page
 framework.page.nextPage=Next Page
 framework.page.eachPage=Each page
 framework.page.records=records, 
-framework.page.summary=Showing {1}~{2} of {0} entries.
+framework.page.summary=showing {1}~{2} of {0} entries.
 
 #department module
 system.department.common.action=Action
@@ -66,6 +66,7 @@ system.menu.comm.depth=Depth
 system.menu.comm.resource=Resource
 system.menu.comm.order=Order
 system.menu.comm.type=Type
+system.menu.comm.select=--Select--
 
 system.menu.list.rowNo=Row
 system.menu.list.directory=Directory
@@ -77,4 +78,3 @@ system.menu.add.action.addDirectory=Add Directory
 system.menu.add.action.addMenu=Add Menu
 system.menu.add.action.addFunction=Add Function
 system.menu.add.action.chooseMenu=Choose Directory/Menu
-system.menu.add.select=--Select--
