--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -66,6 +66,7 @@ system.menu.comm.depth=深度
 system.menu.comm.resource=资源
 system.menu.comm.order=排序
 system.menu.comm.type=类型
+system.menu.common.select=--请选择--
 
 system.menu.list.rowNo=行号
 system.menu.list.directory=目录
@@ -77,4 +78,3 @@ system.menu.add.action.addDirectory=添加目录
 system.menu.add.action.addMenu=添加菜单
 system.menu.add.action.addFunction=添加功能
 system.menu.add.action.chooseMenu=选择目录/菜单
-system.menu.add.select=--请选择--
