--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -78,3 +78,5 @@ system.menu.add.action.addDirectory=Add Directory
 system.menu.add.action.addMenu=Add Menu
 system.menu.add.action.addFunction=Add Function
 system.menu.add.action.chooseMenu=Choose Directory/Menu
+
+#role module
