--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -12,6 +12,7 @@ system.user.common.action.delete=Delete
 system.user.common.action.editUser=Edit User
 system.user.common.action.createUser=Create User
 system.user.common.action.submit=Submit
+system.user.common.action.cancel=Cancel
 
 system.user.placeholder.search=Search
 system.user.placeholder.username=Please enter the username
@@ -80,3 +81,27 @@ system.menu.add.action.addFunction=Add Function
 system.menu.add.action.chooseMenu=Choose Directory/Menu
 
 #role module
+system.role.common.action=Action
+system.role.common.action.createRole=Create New
+system.role.common.action.batchDeleteRole=Batch Delete
+system.role.common.action.authorize=Authorize
+system.role.common.action.edit=Edit
+system.role.common.action.delete=Delete
+system.role.common.action.submit=Submit
+system.role.common.action.cancel=Cancel
+
+system.role.common.role=Role
+system.role.common.roleName=Role Name
+system.role.common.description=Description
+system.role.common.createTime=Create Time
+system.role.common.status=Status
+system.role.common.status.enabled=Enabled
+system.role.common.status.disabled=Disabled
+
+system.row.list.rowNo=Row
+system.row.list.roleUserList=Role:[{0}]'s User List
+system.row.list.viewUser=【View User】
+system.row.list.message.deleteRole=R U sure to delete this record?
+
+#log module
+system.log.list.rowNo
