--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -12,6 +12,7 @@ system.user.common.action.delete=删除
 system.user.common.action.editUser=编辑用户
 system.user.common.action.createUser=创建用户
 system.user.common.action.submit=提交
+system.user.common.action.cancel=取消
 
 system.user.placeholder.search=搜索
 system.user.placeholder.username=请输入用户名
@@ -78,3 +79,26 @@ system.menu.add.action.addDirectory=添加目录
 system.menu.add.action.addMenu=添加菜单
 system.menu.add.action.addFunction=添加功能
 system.menu.add.action.chooseMenu=选择目录/菜单
+
+#role module
+system.role.common.action=操作
+system.role.common.action.createRole=创建新角色
+system.role.common.action.batchDeleteRole=批量删除角色
+system.role.common.action.authorize=授权
+system.role.common.action.edit=编辑
+system.role.common.action.delete=删除
+system.role.common.action.submit=提交
+system.role.common.action.cancel=取消
+
+system.role.common.role=角色
+system.role.common.roleName=角色名称
+system.role.common.description=描述
+system.role.common.createTime=创建时间
+system.role.common.status=状态
+system.role.common.status.enabled=启用
+system.role.common.status.disabled=停用
+
+system.row.list.rowNo=行号
+system.row.list.roleUserList=所属角色[{0}]的用户列表
+system.row.list.viewUser=【查看用户】
+system.row.list.message.deleteRole=您确定要删除该条记录吗?
