--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -98,10 +98,16 @@ system.role.common.status=Status
 system.role.common.status.enabled=Enabled
 system.role.common.status.disabled=Disabled
 
-system.row.list.rowNo=Row
-system.row.list.roleUserList=Role:[{0}]'s User List
-system.row.list.viewUser=【View User】
-system.row.list.message.deleteRole=R U sure to delete this record?
+system.role.list.rowNo=Row
+system.role.list.roleUserList=Role:[{0}]'s User List
+system.role.list.viewUser=【View User】
+system.role.list.message.deleteRole=R U sure to delete this record?
 
 #log module
-system.log.list.rowNo
+system.log.list.rowNo=Row
+system.log.list.operation=Operation
+system.log.list.user=User
+system.log.list.url=Url
+system.log.list.logDateTime=Log Time
+system.log.list.action=Action
+system.log.list.action.viewParam=View Param
