--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -98,7 +98,16 @@ system.role.common.status=状态
 system.role.common.status.enabled=启用
 system.role.common.status.disabled=停用
 
-system.row.list.rowNo=行号
-system.row.list.roleUserList=所属角色[{0}]的用户列表
-system.row.list.viewUser=【查看用户】
-system.row.list.message.deleteRole=您确定要删除该条记录吗?
+system.role.list.rowNo=行号
+system.role.list.roleUserList=所属角色[{0}]的用户列表
+system.role.list.viewUser=【查看用户】
+system.role.list.message.deleteRole=您确定要删除该条记录吗?
+
+#log module
+system.log.list.rowNo=行号
+system.log.list.operation=日志操作
+system.log.list.user=用户
+system.log.list.url=Url
+system.log.list.logDateTime=时间
+system.log.list.action=操作
+system.log.list.action.viewParam=查看参数
