--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -1,3 +1,9 @@
+#common module
+system.common.placeholder.description=Please enter a description, up to 300 characters...
+system.common.message.delete=R U sure to delete this record?
+system.common.action.submit=Submit
+system.common.action.cancel=Cancel
+
 #user module
 system.user.common.userName=User Name
 system.user.common.department=Department
@@ -11,16 +17,12 @@ system.user.common.action.edit=Edit
 system.user.common.action.delete=Delete
 system.user.common.action.editUser=Edit User
 system.user.common.action.createUser=Create User
-system.user.common.action.submit=Submit
-system.user.common.action.cancel=Cancel
 
 system.user.placeholder.search=Search
 system.user.placeholder.username=Please enter the username
-system.user.placeholder.description=Please enter a description, up to 300 characters...
 
 system.user.list.rowNo=Row
 system.user.list.creationTime=Creation Time
-system.user.list.message.deleteUser=R U sure to delete this record?
 
 #paganation module
 framework.page.previousPage=Previous Page
@@ -35,16 +37,13 @@ system.department.common.action.edit=Edit
 system.department.common.action.delete=Delete
 system.department.common.action.editDepartment=Edit Department
 system.department.common.action.createDepartment=Create Department
-system.department.common.action.submit=Submit
 system.department.common.departmentName=Department Name
 system.department.common.description=Description
 
 system.department.placeholder.search=Search
 system.department.placeholder.department=Please enter the department name
-system.department.placeholder.description=Please enter a description, up to 300 characters...
 
 system.department.list.rowNo=Row
-system.department.list.message.deleteUser=R U sure to delete this record?
 
 #menu module
 system.menu.comm.action=Action
@@ -52,7 +51,6 @@ system.menu.comm.action.createMenu=Create Menu
 system.menu.comm.action.delete=Delete
 system.menu.comm.action.edit=Edit
 system.menu.comm.action.editMenu=Edit Menu
-system.menu.comm.action.submit=Submit
 
 system.menu.comm.name=Name
 system.menu.comm.name.directoryName=Directory Name
@@ -73,7 +71,6 @@ system.menu.list.rowNo=Row
 system.menu.list.directory=Directory
 system.menu.list.menu=Menu
 system.menu.list.function=Function
-system.menu.list.message.deleteMenu=R U sure to delete this record?
 
 system.menu.add.action.addDirectory=Add Directory
 system.menu.add.action.addMenu=Add Menu
@@ -87,8 +84,6 @@ system.role.common.action.batchDeleteRole=Batch Delete
 system.role.common.action.authorize=Authorize
 system.role.common.action.edit=Edit
 system.role.common.action.delete=Delete
-system.role.common.action.submit=Submit
-system.role.common.action.cancel=Cancel
 
 system.role.common.role=Role
 system.role.common.roleName=Role Name
@@ -99,9 +94,8 @@ system.role.common.status.enabled=Enabled
 system.role.common.status.disabled=Disabled
 
 system.role.list.rowNo=Row
-system.role.list.roleUserList=Role:[{0}]'s User List
+system.role.list.roleUserList=Users belongs to Role:[{0}]
 system.role.list.viewUser=【View User】
-system.role.list.message.deleteRole=R U sure to delete this record?
 
 #log module
 system.log.list.rowNo=Row
