--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -1,3 +1,9 @@
+#common module
+system.common.placeholder.description=请输入描述，最多300个字符...
+system.common.message.delete=您确定要删除该条记录吗?
+system.common.action.submit=提交
+system.common.action.cancel=取消
+
 #user module
 system.user.common.userName=用户名
 system.user.common.department=部门
@@ -11,16 +17,12 @@ system.user.common.action.edit=编辑
 system.user.common.action.delete=删除
 system.user.common.action.editUser=编辑用户
 system.user.common.action.createUser=创建用户
-system.user.common.action.submit=提交
-system.user.common.action.cancel=取消
 
 system.user.placeholder.search=搜索
 system.user.placeholder.username=请输入用户名
-system.user.placeholder.description=请输入描述，最多300个字符...
 
 system.user.list.rowNo=行号
 system.user.list.creationTime=创建时间
-system.user.list.message.deleteUser=您确定要删除该条记录吗?
 
 #paganation module
 framework.page.previousPage=前一页
@@ -35,16 +37,13 @@ system.department.common.action.edit=编辑
 system.department.common.action.delete=删除
 system.department.common.action.editDepartment=编辑部门
 system.department.common.action.createDepartment=创建部门
-system.department.common.action.submit=提交
 system.department.common.departmentName=部门名称
 system.department.common.description=描述
 
 system.department.placeholder.search=搜索
 system.department.placeholder.department=请输入部门名称
-system.department.placeholder.description=请输入描述，最多300个字符...
 
 system.department.list.rowNo=行号
-system.department.list.message.deleteUser=您确定要删除该条记录吗?
 
 #menu module
 system.menu.comm.action=操作
@@ -52,7 +51,6 @@ system.menu.comm.action.createMenu=创建菜单
 system.menu.comm.action.delete=删除
 system.menu.comm.action.edit=编辑
 system.menu.comm.action.editMenu=编辑菜单
-system.menu.comm.action.submit=提交
 
 system.menu.comm.name=名称
 system.menu.comm.name.directoryName=目录名称
@@ -73,7 +71,6 @@ system.menu.list.rowNo=行号
 system.menu.list.directory=目录
 system.menu.list.menu=菜单
 system.menu.list.function=功能
-system.menu.list.message.deleteMenu=您确定要删除该条记录吗?
 
 system.menu.add.action.addDirectory=添加目录
 system.menu.add.action.addMenu=添加菜单
@@ -87,8 +84,6 @@ system.role.common.action.batchDeleteRole=批量删除角色
 system.role.common.action.authorize=授权
 system.role.common.action.edit=编辑
 system.role.common.action.delete=删除
-system.role.common.action.submit=提交
-system.role.common.action.cancel=取消
 
 system.role.common.role=角色
 system.role.common.roleName=角色名称
@@ -101,11 +96,10 @@ system.role.common.status.disabled=停用
 system.role.list.rowNo=行号
 system.role.list.roleUserList=所属角色[{0}]的用户列表
 system.role.list.viewUser=【查看用户】
-system.role.list.message.deleteRole=您确定要删除该条记录吗?
 
 #log module
 system.log.list.rowNo=行号
-system.log.list.operation=日志操作
+system.log.list.operation=操作
 system.log.list.user=用户
 system.log.list.url=Url
 system.log.list.logDateTime=时间
