--- a/src/main/resources/i18n/internation_zh_CN.properties
+++ b/src/main/resources/i18n/internation_zh_CN.properties
@@ -3,6 +3,7 @@ system.common.placeholder.description=请输入描述，最多300个字符...
 system.common.message.delete=您确定要删除该条记录吗?
 system.common.action.submit=提交
 system.common.action.cancel=取消
+system.common.placeholder.search=搜索
 
 #user module
 system.user.common.userName=用户名
@@ -18,7 +19,6 @@ system.user.common.action.delete=删除
 system.user.common.action.editUser=编辑用户
 system.user.common.action.createUser=创建用户
 
-system.user.placeholder.search=搜索
 system.user.placeholder.username=请输入用户名
 
 system.user.list.rowNo=行号
@@ -40,7 +40,6 @@ system.department.common.action.createDepartment=创建部门
 system.department.common.departmentName=部门名称
 system.department.common.description=描述
 
-system.department.placeholder.search=搜索
 system.department.placeholder.department=请输入部门名称
 
 system.department.list.rowNo=行号
