--- a/src/main/resources/i18n/internation_en_US.properties
+++ b/src/main/resources/i18n/internation_en_US.properties
@@ -3,6 +3,7 @@ system.common.placeholder.description=Please enter a description, up to 300 char
 system.common.message.delete=R U sure to delete this record?
 system.common.action.submit=Submit
 system.common.action.cancel=Cancel
+system.common.placeholder.search=Search
 
 #user module
 system.user.common.userName=User Name
@@ -18,7 +19,6 @@ system.user.common.action.delete=Delete
 system.user.common.action.editUser=Edit User
 system.user.common.action.createUser=Create User
 
-system.user.placeholder.search=Search
 system.user.placeholder.username=Please enter the username
 
 system.user.list.rowNo=Row
@@ -40,7 +40,6 @@ system.department.common.action.createDepartment=Create Department
 system.department.common.departmentName=Department Name
 system.department.common.description=Description
 
-system.department.placeholder.search=Search
 system.department.placeholder.department=Please enter the department name
 
 system.department.list.rowNo=Row
@@ -81,7 +80,7 @@ system.menu.add.action.chooseMenu=Choose Directory/Menu
 system.role.common.action=Action
 system.role.common.action.createRole=Create New
 system.role.common.action.batchDeleteRole=Batch Delete
-system.role.common.action.authorize=Authorize
+system.role.common.action.authorize=Auth
 system.role.common.action.edit=Edit
 system.role.common.action.delete=Delete
 
@@ -94,7 +93,7 @@ system.role.common.status.enabled=Enabled
 system.role.common.status.disabled=Disabled
 
 system.role.list.rowNo=Row
-system.role.list.roleUserList=Users belongs to Role:[{0}]
+system.role.list.roleUserList=User belongs to Role:[{0}]
 system.role.list.viewUser=【View User】
 
 #log module
@@ -104,4 +103,4 @@ system.log.list.user=User
 system.log.list.url=Url
 system.log.list.logDateTime=Log Time
 system.log.list.action=Action
-system.log.list.action.viewParam=View Param
+system.log.list.action.viewParam=Param
